--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sequelize": "^6.35.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/joi": "^17.2.3",
